Улучшение скорости загрузки

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,6 +1,7 @@
 .button {
   background-color: @color-basic-green;
   border: none;
+  cursor: pointer;
 
   &:hover {
     background-color: @color-basic-green-3;
