--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,18 +1,17 @@
 .catalog {
   background-color: @color-white;
-
   padding-top: 27px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 27px;
+    padding-top: 0;
     padding-bottom: 0;
-    margin-bottom: 68px;
+    margin-bottom: 64px;
   }
 
   @media (min-width: @desktop-width) {
     padding-top: 27px;
     padding-bottom: 0;
-    margin-bottom: 75px;
+    margin-bottom: 72px;
   }
 }
 
@@ -35,10 +34,9 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
-  padding-bottom: 41px;
   margin: 0 auto;
-  margin-bottom: 8px;
   width: 280px;
+  margin-bottom: 39px;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
@@ -47,6 +45,7 @@
     border-bottom: none;
     width: 431px;
     margin: 0;
+    margin-bottom: 83px;
   }
 
   @media (min-width: @desktop-width) {
@@ -57,10 +56,6 @@
     margin-bottom: 84px;
     width: 431px;
   }
-}
-
-.catalog__product-list {
-  margin-bottom: 36px;
 }
 
 .catalog__show-more {
