--- a/source/less/blocks/form-comment.less
+++ b/source/less/blocks/form-comment.less
@@ -33,9 +33,11 @@
     margin-bottom: 76px;
     padding-right: 38px;
     padding-left: 39px;
+    margin-left: -41px;
 
     &::before {
       left: -200%;
+      top: 60%;
     }
   }
 
@@ -61,8 +63,8 @@
   text-transform: uppercase;
   border: 1px solid @color-light-grey-4;
   width: 280px;
-  min-height: 150px;
-  padding: 9px 12px 9px 15px;
+  min-height: 149px;
+  padding: 6px 12px 9px 13px;
   display: block;
 
   @media (min-width: @tablet-width) {
@@ -78,6 +80,6 @@
     min-height: 174px;
     font-size: 20px;
     line-height: 30px;
-    padding: 10px 19px 10px 19px;
+    padding: 10px 16px;
   }
 }
