--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -15,12 +15,13 @@
   background-color: @color-white;
   display: inline-block;
   padding-right: 14px;
+  padding-left: 14px;
 
   &::before {
     content: "";
     position: absolute;
     z-index: -2;
-    top: 50%;
+    top: 32%;
     left: 0;
     background-color: @color-basic-green;
     width: 1000%;
@@ -31,11 +32,12 @@
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
-    padding-left: 39px;
-    padding-right: 42px;
+    padding: 0 39px;
+    margin-left: -41px;
 
     &::before {
       left: -200%;
+      top: 60%;
     }
   }
 
@@ -45,6 +47,7 @@
     margin-bottom: 76px;
     padding-left: 40px;
     padding-right: 40px;
+    margin-left: -44px;
 
     &::before {
       left: -200%;
@@ -64,7 +67,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 1220px;
+    width: 1214px;
     flex-direction: row;
     justify-content: space-between;
   }
@@ -83,12 +86,12 @@
     width: 634px;
 
     &:not(:last-child) {
-      margin-bottom: 20px;
+      margin-bottom: 19px;
     }
   }
 
   @media (min-width: @desktop-width) {
-    width: 570px;
+    width: 567px;
 
     &:not(:last-child) {
       margin-bottom: 0;
@@ -142,19 +145,19 @@
   color: @color-dark-grey;
   text-transform: uppercase;
   width: 100%;
-  padding: 12px 35px 14px 15px;
+  padding: 13px 30px 12px 12px;
   border: 1px solid @color-light-grey-4;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    padding: 10px 45px 10px 21px;
+    padding: 10px 45px 11px 17px;
   }
 
   @media (min-width: @desktop-width) {
     font-size: 20px;
     line-height: 30px;
-    padding: 10px 45px 10px 21px;
+    padding: 10px 45px 10px 17px;
   }
 
   &:hover {
@@ -204,8 +207,8 @@
 }
 
 .form-contacts__icon--email {
-  left: 188px;
-  top: 15px;
+  left: 182px;
+  top: 17px;
 
   @media (min-width: @tablet-width) {
     left: 506px;
@@ -219,8 +222,8 @@
 }
 
 .form-contacts__icon--phone {
-  left: 173px;
-  top: 11px;
+  left: 169px;
+  top: 15px;
 
   @media (min-width: @tablet-width) {
     left: 493px;
