--- a/source/less/blocks/line.less
+++ b/source/less/blocks/line.less
@@ -17,6 +17,13 @@
     &::before {
       left: 0;
       width: 100%;
+      top: 26%;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &::before {
+      width: 1000%;
       top: 20%;
     }
   }
@@ -54,7 +61,7 @@
     line-height: 36px;
     padding-bottom: 0;
     border-bottom: none;
-    margin-bottom: 80px;
+    margin-bottom: 51px;
     padding-right: 37px;
     padding-left: 37px;
   }
@@ -64,5 +71,7 @@
     line-height: 36px;
     padding-right: 35px;
     padding-left: 40px;
+    margin-left: -40px;
+    margin-bottom: 79px;
   }
 }
