--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -21,6 +21,7 @@
 
 .main-footer__wrapper-link {
   padding: 20px;
+  padding-top: 27px;
   min-height: 34px;
   display: flex;
   flex-direction: column;
@@ -31,12 +32,13 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 58px 30px 55px 30px;
+    padding: 75px 30px 55px 30px;
   }
 
   @media (min-width: @desktop-width) {
     width: 1440px;
     padding: 110px;
+    padding-top: 59px;
     flex-direction: row;
     justify-content: space-between;
   }
