--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,10 +1,20 @@
 .main-header {
   @media (min-width: @tablet-width) {
-    margin-bottom: 52px;
+    margin-bottom: 53px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     margin-bottom: 107px;
+  }
+}
+
+.main-header--form {
+  margin-bottom: 70px;
+}
+
+.main-header--catalog {
+  @media (min-width: @desktop-width) {
+    margin-bottom: 44px;
   }
 }
 
