--- a/source/less/blocks/select-program.less
+++ b/source/less/blocks/select-program.less
@@ -6,7 +6,7 @@
   width: 320px;
   padding: 20px;
   padding-top: 27px;
-  padding-bottom: 27px;
+  padding-bottom: 30px;
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
@@ -43,31 +43,34 @@
   @media (min-width: @desktop-width) {
     font-size: 60px;
     line-height: 60px;
-    margin-bottom: 56px;
+    margin-bottom: 57px;
   }
 }
 
 .select-program__description {
   font-family: @font-oswald;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 14px;
+  line-height: 18px;
   color: @color-black;
   text-transform: uppercase;
   margin: 0;
   margin-bottom: 39px;
+  width: 270px;
 
   @media (min-width: @tablet-width) {
     width: 323px;
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 66px;
+    padding-left: 3px;
   }
 
   @media (min-width: @desktop-width) {
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 66px;
+    padding-left: 1px;
   }
 }
 
@@ -84,7 +87,7 @@
   @media (min-width: @desktop-width) {
     flex-direction: row;
     min-width: 1218px;
-    margin-bottom: 65px;
+    margin-bottom: 68px;
   }
 }
 
@@ -93,6 +96,7 @@
 
   @media (min-width: @tablet-width) {
     width: 768px;
+    padding-left: 3px;
   }
 
   @media (min-width: @desktop-width) {
@@ -142,7 +146,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 71px;
+    margin-bottom: 74px;
   }
 
   @media (min-width: @desktop-width) {
@@ -153,14 +157,14 @@
 .select-program__form-contacts {
   padding: 0;
   margin: 0;
-  margin-bottom: 24px;
+  margin-bottom: 7px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 65px;
+    margin-bottom: 34px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 69px;
+    margin-bottom: 38px;
   }
 }
 
@@ -196,7 +200,7 @@
 }
 
 .select-program__button {
-  margin-bottom: 21px;
+  margin-bottom: 24px;
 
   @media (min-width: @tablet-width) {
     margin-right: 61px;
