--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -5,13 +5,13 @@
 
   @media (min-width: @tablet-width) {
     border-bottom: none;
-    width: 132px;
+    width: 250px;
     padding: 0;
     margin: 0;
   }
 
   @media (min-width: @desktop-width) {
-    /*...*/
+    width: 400px;
   }
 }
 
@@ -27,6 +27,14 @@
   @media (max-width: @mobile-width-only) {
     margin: 0 auto;
     width: 320px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-left: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 25px;
   }
 }
 
