--- a/source/less/blocks/form-checkbox.less
+++ b/source/less/blocks/form-checkbox.less
@@ -9,7 +9,8 @@
   line-height: 26px;
   color: @color-black;
   padding: 0;
-  margin-bottom: 34px;
+  margin: 0;
+  margin-bottom: 38px;
   position: relative;
   background-color: @color-white;
   display: inline-block;
@@ -30,19 +31,21 @@
   @media (min-width: @tablet-width) {
     font-size: 36px;
     line-height: 36px;
-    margin-bottom: 57px;
+    margin-bottom: 62px;
     padding-right: 41px;
     padding-left: 40px;
+    margin-left: -41px;
 
     &::before {
       left: -200%;
+      top: 60%;
     }
   }
 
   @media (min-width: @desktop-width) {
     font-size: 36px;
     line-height: 36px;
-    margin-bottom: 57px;
+    margin-bottom: 62px;
     padding-right: 40px;
     padding-left: 40px;
 
@@ -62,14 +65,14 @@
 
   @media (min-width: @tablet-width) {
     grid-template-columns: 221px 221px;
-    gap: 32px 123px;
-    margin-bottom: 54px;
+    gap: 42px 123px;
+    margin-bottom: 50px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: 221px 221px 221px 221px;
     gap: 32px 104px;
-    margin-bottom: 61px;
+    margin-bottom: 64px;
   }
 }
 
@@ -77,7 +80,7 @@
   position: relative;
 
   &:not(:last-child) {
-    margin-bottom: 25px;
+    margin-bottom: 22px;
   }
 
   @media (min-width: @tablet-width) {
@@ -162,6 +165,7 @@
   display: inline-block;
   position: absolute;
   top: -5px;
+  left: -1px;
 
   @media (min-width: @tablet-width) {
     width: 40px;
@@ -171,6 +175,7 @@
   @media (min-width: @desktop-width) {
     width: 40px;
     height: 40px;
+    left: -3px;
   }
 }
 
@@ -192,6 +197,6 @@
   @media (min-width: @desktop-width) {
     font-size: 20px;
     line-height: 30px;
-    padding-left: 59px;
+    padding-left: 57px;
   }
 }
