--- a/source/less/blocks/form-info.less
+++ b/source/less/blocks/form-info.less
@@ -14,7 +14,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  padding-bottom: 27px;
+  padding-bottom: 22px;
 
   @media (min-width: @tablet-width) {
     padding-bottom: 0;
@@ -31,17 +31,21 @@
   align-items: center;
 
   &:not(:last-child) {
-    margin-bottom: 11px;
+    margin-bottom: 15px;
   }
 
   @media (min-width: @tablet-width) {
+    width: 566px;
+
     &:not(:last-child) {
-      margin-bottom: 20px;
+      margin-bottom: 21px;
     }
   }
 
   @media (min-width: @desktop-width) {
-    /*...*/
+    &:not(:last-child) {
+      margin-bottom: 21px;
+    }
   }
 }
 
@@ -53,7 +57,7 @@
   color: @color-dark-grey;
   text-transform: uppercase;
   margin: 0;
-  margin-right: 13px;
+  margin-right: 16px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -94,8 +98,8 @@
   width: 100%;
   height: 44px;
   padding: 0;
-  padding-top: 13px;
-  padding-left: 16px;
+  padding-top: 14px;
+  padding-left: 15px;
   padding-bottom: 14px;
   font-family: @font-oswald;
   font-weight: 400;
@@ -107,18 +111,19 @@
   border-radius: 2px;
 
   @media (min-width: @tablet-width) {
+    height: 51px;
     font-size: 20px;
     line-height: 30px;
-    padding-top: 10px;
-    padding-left: 20px;
-    padding-bottom: 12px;
+    padding-top: 17px;
+    padding-left: 19px;
+    padding-bottom: 19px;
   }
 
   @media (min-width: @desktop-width) {
     font-size: 20px;
     line-height: 30px;
     padding-top: 10px;
-    padding-left: 20px;
+    padding-left: 17px;
     padding-bottom: 12px;
   }
 
