--- a/source/less/blocks/functional-food.less
+++ b/source/less/blocks/functional-food.less
@@ -21,6 +21,12 @@
     background-size: contain;
     top: 0;
     background-position: center;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/index-cat-background-mobile@2x.jpg");
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
   }
 
   @media (min-width: @tablet-width) {
@@ -48,11 +54,6 @@
   position: relative;
   z-index: 6;
 
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/index-cat-background-mobile@2x.jpg");
-    background-size: 320px auto;
-  }
-
   @media (min-width: @tablet-width) {
     min-width: 534px;
     min-height: 810px;
@@ -70,6 +71,7 @@
     &::after {
       content: url("../img/index-cat-background-desktop.jpg");
       position: absolute;
+      background-size: contain;
       left: 531px;
       top: -223px;
       min-width: 920px;
@@ -91,6 +93,7 @@
     @media (min-resolution: 2dppx) {
       &::after {
         content: url("../img/index-cat-background-desktop@2x.jpg");
+        background-size: contain;
       }
     }
   }
