--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -40,14 +40,22 @@
 }
 
 .main-container__catalog {
-  margin-bottom: 50px;
-}
-
-.main-container__catalog-edditional {
-  margin-bottom: 35px;
+  margin-bottom: 23px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 76px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 86px;
+  }
+}
+
+.main-container__catalog-edditional {
+  margin-bottom: 33px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 43px;
   }
 
   @media (min-width: @desktop-width) {
