--- a/source/less/blocks/parametrs.less
+++ b/source/less/blocks/parametrs.less
@@ -5,9 +5,10 @@
   }
 
   @media (min-width: @desktop-width) {
+    justify-content: start;
     display: flex;
     flex-direction: column;
-    width: 586px;
+    width: 634px;
   }
 }
 
@@ -16,7 +17,7 @@
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 35px;
+  margin-bottom: 44px;
 
   @media (min-width: @tablet-width) {
     margin-top: 0;
@@ -24,8 +25,9 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 55px;
+    margin-bottom: 44px;
     width: 400px;
+    height: 77px;
   }
 }
 
