--- a/source/less/blocks/product-list.less
+++ b/source/less/blocks/product-list.less
@@ -1,7 +1,7 @@
 .product-list {
   list-style: none;
   border-top: 1px solid @color-light-grey-1;
-
+  margin: 0;
   padding: 0;
 
   @media (min-width: @tablet-width) {
