--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -1,5 +1,5 @@
 .product {
-  padding-top: 11px;
+  padding-top: 19px;
 
   @media (min-width: @tablet-width) {
     width: 324px;
@@ -18,11 +18,10 @@
   margin: 0 auto;
   width: 280px;
   display: grid;
-  grid-template-columns: 140px 141px;
-  grid-template-areas: "image name"
-    "image detail"
+  grid-template-columns: 140px 142px;
+  grid-template-areas: "image info"
     "button button";
-  row-gap: 20px;
+  row-gap: 8px;
 
   @media (min-width: @tablet-width) {
     display: block;
@@ -36,7 +35,7 @@
     background-color: @color-basic-grey;
     width: 245px;
     min-height: 431px;
-    padding: 0 30px 40px 35px;
+    padding: 0 37px 40px 38px;
   }
 }
 
@@ -47,15 +46,15 @@
 .product__wrapper-show-more {
   background-color: @color-white;
   position: relative;
-  padding-top: 161px;
+  padding-top: 56px;
   display: block;
 
   &::before {
     content: "";
     position: absolute;
-    top: 82px;
-    left: 109px;
-    width: 60px;
+    top: 16px;
+    left: 126px;
+    width: 30px;
     height: 2px;
     background-color: @color-special-grey-2;
   }
@@ -63,63 +62,49 @@
   &::after {
     content: "";
     position: absolute;
-    top: 51px;
+    top: 2px;
     left: 50%;
     width: 2px;
-    height: 60px;
+    height: 30px;
     background-color: @color-special-grey-2;
   }
 
   @media (min-width: @tablet-width) {
     border: 2px solid @color-basic-grey;
+    padding-top: 160px;
 
     &::before {
-      content: "";
-      position: absolute;
       top: 82px;
       left: 132px;
       width: 60px;
       height: 2px;
-      background-color: @color-special-grey-2;
     }
 
     &::after {
-      content: "";
-      position: absolute;
       top: 51px;
       left: 50%;
       width: 2px;
       height: 60px;
-      background-color: @color-special-grey-2;
     }
   }
 
   @media (min-width: @desktop-width) {
     border: 2px solid @color-basic-grey;
+    padding-top: 156px;
 
     &::before {
-      content: "";
-      position: absolute;
-      top: 82px;
-      left: 92px;
-      width: 60px;
-      height: 2px;
-      background-color: @color-special-grey-2;
+      top: 75px;
+      left: 90px;
     }
 
     &::after {
-      content: "";
-      position: absolute;
-      top: 51px;
+      top: 44px;
       left: 50%;
-      width: 2px;
-      height: 60px;
-      background-color: @color-special-grey-2;
     }
   }
 }
 
-.product__picture {
+.product__image-wrapper {
   grid-area: image;
   align-self: center;
   justify-self: center;
@@ -128,12 +113,41 @@
     text-align: center;
     display: block;
     margin: 0 auto;
-    margin-bottom: 34px;
+    margin-bottom: 29px;
   }
 
   @media (min-width: @desktop-width) {
     display: block;
+    margin-bottom: 38px;
   }
+}
+
+.product__image-wrapper--big {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 22px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 38px;
+  }
+}
+
+.product__picture {
+  @media (min-width: @tablet-width) {
+    margin-top: -72px;
+    width: 168px;
+    height: 200px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: -80px;
+    width: 172px;
+    height: 196px;
+  }
+}
+
+.product__info-wrapper {
+  grid-area: info;
 }
 
 .product__name {
@@ -143,13 +157,15 @@
   line-height: 20px;
   color: @color-black-3;
   margin: 0;
-  grid-area: name;
   width: 76px;
+  text-transform: uppercase;
+  margin-bottom: 14px;
 
   @media (min-width: @tablet-width) {
+    text-align: center;
     font-size: 20px;
     line-height: 24px;
-    width: 174px;
+    width: 135px;
     margin: 0 auto;
     margin-bottom: 21px;
   }
@@ -157,19 +173,23 @@
   @media (min-width: @desktop-width) {
     font-size: 20px;
     line-height: 21px;
+    width: 145px;
+    margin-bottom: 25px;
+    padding-left: 6px;
   }
 }
 
 .product__detail {
   margin: 0;
-  grid-area: detail;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 33px;
+    margin-bottom: 34px;
+    padding-left: 2px;
   }
 
   @media (min-width: @desktop-width) {
     margin-bottom: 33px;
+    padding-left: 5px;
   }
 }
 
@@ -178,7 +198,7 @@
   justify-content: space-between;
 
   @media (min-width: @tablet-width) {
-    padding-bottom: 9px;
+    padding-bottom: 7px;
     border-bottom: 1px solid @color-special-grey;
 
     &:not(:last-child) {
@@ -187,7 +207,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    /*...*/
+    padding-bottom: 8px;
   }
 }
 
@@ -228,6 +248,14 @@
   @media (min-width: @desktop-width) {
     font-size: 16px;
     line-height: 16px;
+  }
+}
+
+.product__value--weight {
+  padding-right: 3px;
+
+  @media (min-width: @desktop-width) {
+    padding-right: 0;
   }
 }
 
