--- a/source/less/blocks/range.less
+++ b/source/less/blocks/range.less
@@ -1,21 +1,119 @@
 .range {
   position: relative;
-  /*...*/
+  align-self: end;
+
+  @media (max-width: @mobile-width-only) {
+    min-height: 256px;
+  }
+
   &::before {
+    z-index: 2;
     height: 256px;
     width: 4px;
     border-radius: 2px;
     content: "";
     position: absolute;
-    left: 45%;
+    left: 50%;
     background-color: @color-dark-grey-1;
+
+    @media (min-width: @tablet-width) {
+      top: 105px;
+      height: 512px;
+    }
+
+    @media (min-width: @desktop-width) {
+      top: 47px;
+      height: 512px;
+    }
   }
 }
 
-.range__changes {
-  font-family: @font-oswald;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  text-transform: uppercase;
+.range__list {
+  position: relative;
+}
+
+.range__item {
+  display: flex;
+  justify-content: center;
+  left: 50%;
+  width: 50%;
+}
+
+.range__item--before {
+  position: absolute;
+  left: 50%;
+  top: -7px;
+  transform: translate(-100%, 0);
+  width: 50%;
+
+  @media (min-width: @tablet-width) {
+    left: 51%;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: -65px;
+    left: 335px;
+  }
+}
+
+.range__item--after {
+  position: absolute;
+  left: 50%;
+  transform: translate(0, 0);
+  top: -7px;
+  width: 50%;
+
+  @media (min-width: @desktop-width) {
+    top: -65px;
+  }
+}
+
+.range__box {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 620px;
+  margin: 0 auto;
+
+  @media (max-width: @mobile-width-only) {
+    height: 264px;
+  }
+}
+
+.range__item img {
+  position: absolute;
+  bottom: 12px;
+  transform: translate(-50%, 0);
+}
+
+.range__item--before img {
+  left: 100%;
+  width: 280px;
+  height: 256px;
+
+  @media (min-width: @tablet-width) {
+    width: 580px;
+    height: 512px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 580px;
+    height: 512px;
+  }
+}
+
+.range__item--after img {
+  left: 0;
+  width: 280px;
+  height: 256px;
+
+  @media (min-width: @tablet-width) {
+    width: 580px;
+    height: 512px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 580px;
+    height: 512px;
+  }
 }
