--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -11,13 +11,14 @@
   padding: 0;
   margin: 0;
   margin-bottom: 35px;
+  width: 200px;
   position: relative;
   background-color: @color-white;
   display: inline-block;
   padding-right: 14px;
-  padding-left: 14px;
 
   &::before {
+    padding-left: 14px;
     content: "";
     position: absolute;
     z-index: -2;
@@ -34,6 +35,7 @@
     margin-bottom: 76px;
     padding: 0 39px;
     margin-left: -41px;
+    width: 593px;
 
     &::before {
       left: -200%;
@@ -48,6 +50,7 @@
     padding-left: 40px;
     padding-right: 40px;
     margin-left: -44px;
+    width: 595px;
 
     &::before {
       left: -200%;
@@ -208,7 +211,7 @@
 
 .form-contacts__icon--email {
   left: 182px;
-  top: 17px;
+  top: 11px;
 
   @media (min-width: @tablet-width) {
     left: 506px;
@@ -216,8 +219,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    left: 436px;
-    top: 19px;
+    left: 448px;
+    top: 17px;
   }
 }
 
@@ -226,12 +229,12 @@
   top: 15px;
 
   @media (min-width: @tablet-width) {
-    left: 493px;
+    left: 496px;
     top: 16px;
   }
 
   @media (min-width: @desktop-width) {
-    left: 429px;
+    left: 439px;
     top: 15px;
   }
 }
