--- a/source/less/blocks/parametrs.less
+++ b/source/less/blocks/parametrs.less
@@ -17,7 +17,7 @@
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 44px;
+  margin-bottom: 34px;
 
   @media (min-width: @tablet-width) {
     margin-top: 0;
@@ -62,6 +62,7 @@
   text-align: center;
   margin: 0;
   padding-top: 7px;
+  padding-bottom: 10px;
   outline: 1px solid @color-special-grey;
   border-radius: 3px;
 
