--- a/source/less/blocks/product-editional.less
+++ b/source/less/blocks/product-editional.less
@@ -33,6 +33,18 @@
   }
 }
 
+.product-editional__link {
+  text-decoration: none;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
 .product-editional__name {
   font-family: @font-oswald;
   font-weight: 400;
