--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -140,6 +140,18 @@
   grid-area: info;
 }
 
+.product__link {
+  text-decoration: none;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
 .product__name {
   font-family: @font-oswald;
   font-weight: 400;
