--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -109,6 +109,10 @@
   @media (min-width: @tablet-width) {
     min-height: 617px;
   }
+
+  @media (min-width: @desktop-width) {
+    height: 616px;
+  }
 }
 
 .example__description {
