--- a/source/less/blocks/form-checkbox.less
+++ b/source/less/blocks/form-checkbox.less
@@ -100,6 +100,10 @@
   outline: 1px solid @color-special-grey-3;
 }
 
+.form-checkbox__input:focus-visible + .form-checkbox__control-mark {
+  outline: 1px @color-black solid;
+}
+
 .form-checkbox__input:disabled + .form-checkbox__control-mark {
   opacity: 0.3;
 }
