--- a/source/less/blocks/functional-food.less
+++ b/source/less/blocks/functional-food.less
@@ -38,11 +38,44 @@
       display: none;
     }
   }
+
+  @media (min-width: @desktop-width) {
+    &::before {
+      display: block;
+      content: "";
+      width: 100%;
+      height: 694px;
+      position: absolute;
+      left: 50%;
+      top: -223px;
+      background-color: fade(@color-basic-green, 85%);
+      z-index: 3;
+    }
+
+    &::after {
+      display: block;
+      //content: url("../img/index-cat-background-desktop.jpg");
+      background-image: url("../img/index-cat-background-desktop.jpg");
+      background-size: contain;
+      position: absolute;
+      width: 720px;
+      left: 50%;
+      top: -223px;
+      min-height: 694px;
+      z-index: 2;
+    }
+
+    @media (min-resolution: 2dppx) {
+      &::after {
+        content: url("../img/index-cat-background-desktop@2x.jpg");
+        background-size: contain;
+      }
+    }
+  }
 }
 
 .functional-food__wrapper {
   margin: 0 auto;
-  //background-image: url("../img/index-cat-background-mobile.jpg");
   background-repeat: no-repeat;
   color: @color-white;
   font-family: @font-oswald;
@@ -68,7 +101,7 @@
     min-height: 442px;
     padding: 0;
 
-    &::after {
+    /*&::after {
       content: url("../img/index-cat-background-desktop.jpg");
       position: absolute;
       background-size: contain;
@@ -76,25 +109,25 @@
       top: -223px;
       min-height: 499px;
       z-index: -1;
-    }
+    }*/
 
-    &::before {
+    /*&::before {
       content: "";
-      width: 720px;
+      width: 100%;
       height: 694px;
       position: absolute;
       left: 531px;
       top: -223px;
       background-color: fade(@color-basic-green, 85%);
       z-index: 3;
-    }
-
+    }*/
+/*
     @media (min-resolution: 2dppx) {
       &::after {
         content: url("../img/index-cat-background-desktop@2x.jpg");
         background-size: contain;
       }
-    }
+    }*/
   }
 }
 
