--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -70,19 +70,6 @@
   }
 }
 
-.main-header__wrapper-nojs .navigation .navigation__wrapper {
-  @media (max-width: @mobile-width-only) {
-    position: static;
-    display: block;
-  }
-}
-
-.main-header__wrapper-nojs .navigation .navigation__toggle {
-  @media (max-width: @mobile-width-only) {
-    display: none;
-  }
-}
-
 .navigation__toggle {
   position: relative;
   width: 24px;
@@ -116,4 +103,16 @@
 
 .navigation__list {
   padding-top: 0;
+
+  @media (min-width: @tablet-width) {
+    max-width: 500px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 900px;
+  }
+}
+
+.navigation__list--index {
+  max-width: 600px;
 }
