--- a/source/less/blocks/range.less
+++ b/source/less/blocks/range.less
@@ -26,12 +26,13 @@
   width: 50%;
 
   @media (min-width: @tablet-width) {
-    left: 51%;
+    left: 49%;
   }
 
   @media (min-width: @desktop-width) {
     top: -65px;
     left: 335px;
+    left: 51%;
   }
 }
 
@@ -42,8 +43,13 @@
   top: -7px;
   width: 50%;
 
+  @media (min-width: @tablet-width) {
+    left: 48%;
+  }
+
   @media (min-width: @desktop-width) {
     top: -65px;
+    left: 50%;
   }
 }
 
