--- a/source/less/blocks/product-editional.less
+++ b/source/less/blocks/product-editional.less
@@ -25,7 +25,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 14px 0 15px 0;
+    padding: 15px 0 15px 0;
     grid-template-columns: 286px 288px 244px;
     column-gap: 38px;
     grid-template-areas: "product detail button";
@@ -42,6 +42,10 @@
 
   &:active {
     opacity: 0.3;
+  }
+
+  @media (min-width: @desktop-width) {
+    align-self: center;
   }
 }
 
@@ -90,6 +94,7 @@
     justify-content: space-between;
     margin: 0;
     align-items: center;
+    padding-top: 10px;
   }
 }
 
@@ -137,6 +142,12 @@
     font-size: 16px;
     line-height: 20px;
     text-align: left;
+  }
+}
+
+.product-editional__cost--one {
+  @media (min-width: @desktop-width) {
+    margin-right: 8px;
   }
 }
 
