Вносит финальные правки по критериям

--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -24,6 +24,7 @@
   min-height: 34px;
   display: flex;
   flex-direction: column;
+  padding-bottom: 22px;
 
   @media (min-width: @tablet-width) {
     margin: 0 auto;
